fix availability alert spacing

--- a/src/client/styles/components/ItemTable.scss
+++ b/src/client/styles/components/ItemTable.scss
@@ -49,7 +49,7 @@
   text-decoration: underline;
 }
 
-.nypl-results-item .nypl-basic-table .availability-alert {
+.availability-alert {
   margin-top: var(--nypl-space-s);
   & a {
     text-decoration: underline;
